--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>t-webpack</title>
 </head>
 <body>
-    <script src="build/bundle.js"></script>
+    <div id="root"></div>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
